fix: whatsapp webhook audio + funnel state + migration notes

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 VITE_GEMINI_API_KEY=
-VITE_WHATSAPP_TOKEN=
-VITE_WHATSAPP_PHONE_NUMBER_ID=
+VITE_BACKEND_BASE_URL=
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 VITE_ENABLE_SIMULATOR=false
